--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -42,28 +42,16 @@
 
     </android.support.v7.widget.RecyclerView>
 
-    <!--<android.support.design.widget.FloatingActionButton-->
-    <!--android:id="@+id/fab_on"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_margin="@dimen/fab_margin"-->
-    <!--android:clickable="true"-->
-    <!--android:foreground="?android:attr/selectableItemBackground"-->
-    <!--android:src="@android:drawable/stat_sys_data_bluetooth"-->
-    <!--app:layout_anchor="@id/main_coordinatorLayout"-->
-    <!--app:layout_anchorGravity="bottom|end" />-->
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_sync"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_margin="@dimen/fab_margin"
         app:backgroundTint="@color/nursingPrimary"
         android:src="@drawable/search_icon"
         app:layout_anchor="@id/toolbar"
         app:layout_anchorGravity="bottom|right|end" />
-    <!--app:layout_anchor="@id/main_coordinatorLayout"-->
-    <!--app:layout_anchorGravity="bottom|start" />-->
 
 
     <ProgressBar
