--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -44,7 +44,7 @@
 
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_sync"
+        android:id="@+id/fabSearch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
@@ -55,14 +55,14 @@
 
 
     <ProgressBar
-        android:id="@+id/main_progress"
+        android:id="@+id/searching_progress_bar"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_gravity="center"
         android:indeterminate="true" />
 
     <TextView
-        android:id="@+id/hasCard"
+        android:id="@+id/no_device_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
