--- a/app/src/main/res/layout/f_prime_main_dashboard.xml
+++ b/app/src/main/res/layout/f_prime_main_dashboard.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView
+    android:id="@+id/dashboard_root"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_gravity="fill_vertical"
     android:background="@null">
 
     <LinearLayout
@@ -15,10 +17,7 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="10dp"
-            
+            android:layout_margin="10dp"
             android:background="@null"
             app:cardCornerRadius="2dp"
             app:cardElevation="8dp"
@@ -74,9 +73,7 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="10dp"
+            android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="@null"
             app:cardCornerRadius="2dp"
@@ -133,9 +130,7 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="10dp"
+            android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="@null"
             app:cardCornerRadius="2dp"
@@ -194,9 +189,7 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="10dp"
+            android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="@null"
             app:cardCornerRadius="2dp"
@@ -227,12 +220,26 @@
                     android:focusable="true"
                     android:gravity="center"
                     android:padding="15dp"
-                    android:text="@string/dashboard.time"
+                    android:text="@string/dashboard.update"
                     android:textColor="@android:color/white"
                     android:textSize="24sp"/>
 
                 <TextView
-                    android:id="@+id/deviceTime"
+                    android:id="@+id/dashboard_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_margin="25dp"
+                    android:background="?android:selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textColor="@android:color/white"
+                    android:textSize="20sp"/>
+
+                <TextView
+                    android:id="@+id/dashboard_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
@@ -244,8 +251,7 @@
                     android:gravity="center"
                     android:text="0"
                     android:textColor="@android:color/white"
-                    android:textSize="20sp"/>
-
+                    android:textSize="15sp"/>
             </RelativeLayout>
 
         </android.support.v7.widget.CardView>
