--- a/app/src/main/res/layout/i_prime_history.xml
+++ b/app/src/main/res/layout/i_prime_history.xml
@@ -5,45 +5,35 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_margin="@dimen/deviceItem_margin"
+    android:layout_margin="2dp"
     android:background="@null"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
-    app:cardBackgroundColor="@android:color/holo_blue_dark"
-    app:cardCornerRadius="2dp"
-    app:cardElevation="5dp"
+    app:cardCornerRadius="0dp"
+    app:cardElevation="1dp"
     app:cardPreventCornerOverlap="false"
     app:contentPadding="0dp">
 
     <LinearLayout
-        style="@style/ProfileItemFrame"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_margin="10dp"
+        android:background="@null"
         android:divider="?android:attr/dividerHorizontal"
+        android:orientation="vertical"
         android:showDividers="middle">
 
         <TextView
-            android:id="@+id/prime_history_step"
-            style="@style/ProfileItemTextView"
-            android:textColor="#fff"
-            android:textSize="20sp"/>
-
-        <TextView
-            android:id="@+id/prime_history_calorie"
-            style="@style/ProfileItemTextView"
-            android:textColor="#fff"
-            android:textSize="20sp"/>
-
-        <TextView
-            android:id="@+id/prime_history_distance"
-            style="@style/ProfileItemTextView"
-            android:textColor="#fff"
-            android:textSize="20sp"/>
-
-        <TextView
-            android:id="@+id/prime_history_calendar"
-            style="@style/ProfileItemTextView"
-            android:textColor="#fff"
+            android:id="@+id/history_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="7dp"
+            android:background="@null"
+            android:orientation="vertical"
+            android:textColor="@color/text_dark"
             android:textSize="20sp"/>
 
     </LinearLayout>
-
 </android.support.v7.widget.CardView>
