--- a/app/src/main/res/layout/a_prime.xml
+++ b/app/src/main/res/layout/a_prime.xml
@@ -87,7 +87,7 @@
             android:background="@null"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <android.support.v4.widget.NestedScrollView
+            <com.rainbow.kam.bt_scanner.tools.design.PagerNestedScrollView
                 android:id="@+id/prime_nested"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -180,7 +180,7 @@
 
                     </android.support.v7.widget.CardView>
                 </LinearLayout>
-            </android.support.v4.widget.NestedScrollView>
+            </com.rainbow.kam.bt_scanner.tools.design.PagerNestedScrollView>
         </android.support.v4.widget.SwipeRefreshLayout>
     </android.support.design.widget.CoordinatorLayout>
 
