--- a/app/src/main/res/layout/a_prime.xml
+++ b/app/src/main/res/layout/a_prime.xml
@@ -87,7 +87,7 @@
             android:background="@null"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <com.rainbow.kam.bt_scanner.tools.design.PagerNestedScrollView
+            <com.rainbow.kam.bt_scanner.tools.view.PagerNestedScrollView
                 android:id="@+id/prime_nested"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -99,7 +99,7 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <com.rainbow.kam.bt_scanner.tools.design.CustomViewPager
+                    <com.rainbow.kam.bt_scanner.tools.view.CustomViewPager
                         android:id="@+id/prime_viewpager"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -148,7 +148,7 @@
                                 android:focusable="true"
                                 android:gravity="center"
                                 android:padding="15dp"
-                                android:text="@string/dashboard.update"
+                                android:text="@string/prime.update"
                                 android:textColor="@android:color/white"
                                 android:textSize="24sp"/>
 
@@ -180,7 +180,7 @@
 
                     </android.support.v7.widget.CardView>
                 </LinearLayout>
-            </com.rainbow.kam.bt_scanner.tools.design.PagerNestedScrollView>
+            </com.rainbow.kam.bt_scanner.tools.view.PagerNestedScrollView>
         </android.support.v4.widget.SwipeRefreshLayout>
     </android.support.design.widget.CoordinatorLayout>
 
