--- a/app/src/main/res/layout/f_prime.xml
+++ b/app/src/main/res/layout/f_prime.xml
@@ -44,7 +44,6 @@
                 android:focusable="true"
                 android:gravity="center"
                 android:padding="15dp"
-                android:text="@string/dashboard.step"
                 android:textColor="@android:color/white"
                 android:textSize="24sp"/>
 
@@ -65,9 +64,9 @@
 
     </android.support.v7.widget.CardView>
 
-    <com.rainbow.kam.bt_scanner.tools.design.CircleCounter
+    <com.rainbow.kam.bt_scanner.tools.view.CircleCounter
         android:id="@+id/counter"
         style="@style/CircleCounter">
-    </com.rainbow.kam.bt_scanner.tools.design.CircleCounter>
+    </com.rainbow.kam.bt_scanner.tools.view.CircleCounter>
 
 </LinearLayout>
