--- a/app/src/main/res/layout/a_prime.xml
+++ b/app/src/main/res/layout/a_prime.xml
@@ -92,6 +92,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@null"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:fillViewport="true">
 
                 <LinearLayout
