--- a/app/src/main/res/layout/i_prime_history.xml
+++ b/app/src/main/res/layout/i_prime_history.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -28,12 +27,21 @@
             android:id="@+id/history_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_margin="7dp"
+            android:layout_marginLeft="7dp"
+            android:layout_marginRight="7dp"
+            android:layout_toEndOf="@+id/history_icon"
             android:background="@null"
             android:textColor="@color/text_dark"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
+
+        <ImageView
+            android:id="@+id/history_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:background="@null" />
 
         <TextView
             android:id="@+id/history_date"
@@ -44,6 +52,6 @@
             android:layout_margin="7dp"
             android:background="@null"
             android:textColor="@color/text_dark"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
