--- a/app/src/main/res/layout/a_prime.xml
+++ b/app/src/main/res/layout/a_prime.xml
@@ -92,9 +92,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@null"
+                android:fillViewport="true"
                 android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:fillViewport="true">
+                android:focusableInTouchMode="true">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -114,73 +114,6 @@
                         android:layout_height="match_parent"
                         android:background="@null"
                         />
-
-                    <android.support.v7.widget.CardView
-                        android:id="@+id/prime_card_datetime"
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:layout_margin="10dp"
-                        android:background="@null"
-                        android:clickable="true"
-                        android:foreground="?android:attr/selectableItemBackground"
-                        app:cardCornerRadius="2dp"
-                        app:cardElevation="8dp"
-                        app:cardPreventCornerOverlap="false"
-                        app:contentPadding="0dp">
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_centerInParent="true"
-                                android:scaleType="centerCrop"
-                                android:src="@drawable/distance_wallpaper"
-                                android:tint="#88101010"
-                                />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentBottom="true"
-                                android:layout_alignParentStart="true"
-                                android:background="@null"
-                                android:focusable="true"
-                                android:gravity="center"
-                                android:padding="15dp"
-                                android:text="@string/prime.update"
-                                android:textColor="@android:color/white"
-                                android:textSize="24sp"/>
-
-                            <TextView
-                                android:id="@+id/prime_date"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentStart="true"
-                                android:layout_margin="25dp"
-                                android:background="@null"
-                                android:focusable="true"
-                                android:gravity="center"
-                                android:textColor="@android:color/white"
-                                android:textSize="20sp"/>
-
-                            <TextView
-                                android:id="@+id/prime_time"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentEnd="true"
-                                android:layout_centerVertical="true"
-                                android:layout_marginEnd="25dp"
-                                android:background="@null"
-                                android:focusable="true"
-                                android:gravity="center"
-                                android:textColor="@android:color/white"
-                                android:textSize="15sp"/>
-                        </RelativeLayout>
-
-                    </android.support.v7.widget.CardView>
                 </LinearLayout>
             </com.rainbow.kam.bt_scanner.tools.view.PagerNestedScrollView>
         </android.support.v4.widget.SwipeRefreshLayout>
